--- a/ArnesElectronics/Views/admin/DefaultDashboardView.axaml
+++ b/ArnesElectronics/Views/admin/DefaultDashboardView.axaml
@@ -10,13 +10,16 @@
                 <TextBlock Margin="0 20" FontSize="20" FontWeight="Bold">Default admin dashboard view</TextBlock>
                 <StackPanel HorizontalAlignment="Center" VerticalAlignment="Center" Spacing="10">
                     <TextBlock Text="{Binding ButtonClickText}" FontSize="20"/>
-                    <Button Content="click"
-                            Command="{Binding TestBindingCommand}"
+                    <Button Command="{Binding TestBindingCommand}"
                             Padding="5"
                             MinWidth="50"
                             MinHeight="30"
-                            FontSize="20"
-                            HorizontalAlignment="Center"/>
+                            HorizontalAlignment="Center">
+                        <TextBlock Text="Click Me"
+                                   FontSize="20"
+                                   HorizontalAlignment="Center"
+                                   VerticalAlignment="Center"/>
+                    </Button>
                 </StackPanel>
             </StackPanel>
 </UserControl>
