--- a/ArnesElectronics/Styles/Buttons.axaml
+++ b/ArnesElectronics/Styles/Buttons.axaml
@@ -1,4 +1,47 @@
 <Styles xmlns="https://github.com/avaloniaui">
+    
+    <Design.PreviewWith>
+        <Border Padding="20" Background="#333333">
+            <!-- Add Controls for Previewer Here -->
+            <StackPanel HorizontalAlignment="Center" VerticalAlignment="Center" Spacing="10">
+                <Button Classes="Transparent">Hello</Button>
+                <ToggleButton Classes="Theme" IsChecked="True">
+                    <Panel>
+                        <PathIcon Name="On" Data="{StaticResource WeatherMoonRegular}"></PathIcon>
+                        <PathIcon Name="Off" Data="{StaticResource WeatherSunnyRegular}"></PathIcon>
+                    </Panel>
+                </ToggleButton>
+                <ToggleButton Classes="ColorTheme"></ToggleButton>
+            </StackPanel>
+        </Border>
+    </Design.PreviewWith>
+    
+    <Style Selector="Button.Transparent">
+        <Setter Property="FontSize" Value="15"></Setter>
+        <Setter Property="HorizontalAlignment" Value="Center"></Setter>
+        <Setter Property="VerticalAlignment" Value="Center"></Setter>
+        <Setter Property="HorizontalContentAlignment" Value="Center"></Setter>
+        <Setter Property="VerticalContentAlignment" Value="Center"></Setter>
+        <Setter Property="Padding" Value="3"></Setter>
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate>
+                    <Grid>
+                        <ContentPresenter
+                            FontSize ="{TemplateBinding FontSize}"
+                            HorizontalAlignment="{TemplateBinding HorizontalAlignment}"
+                            VerticalAlignment="{TemplateBinding VerticalAlignment}"
+                            HorizontalContentAlignment="{TemplateBinding HorizontalContentAlignment}"
+                            VerticalContentAlignment="{TemplateBinding VerticalContentAlignment}"
+                            Padding="{TemplateBinding Padding}"
+                            Content="{TemplateBinding Content}"/>
+                        <Border Classes="Highlighter"></Border>
+                    </Grid>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+    </Style>
+    
     <!-- Toggle Button Style -->
     <Style Selector="ToggleButton.ColorTheme">
         <Setter Property="Width" Value="35"/>
@@ -33,8 +76,43 @@
         </Setter>
     </Style>
     
+    <Style Selector="ToggleButton.Theme">
+        <Setter Property="HorizontalAlignment" Value="Center"></Setter>
+        <Setter Property="VerticalAlignment" Value="Center"></Setter>
+        <Setter Property="HorizontalContentAlignment" Value="Center"></Setter>
+        <Setter Property="VerticalContentAlignment" Value="Center"></Setter>
+        <Setter Property="Padding" Value="3"></Setter>
+        <Setter Property="Background" Value="Transparent"></Setter>
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate>
+                    <Grid>
+                        <ContentPresenter
+                            HorizontalAlignment="{TemplateBinding HorizontalAlignment}"
+                            VerticalAlignment="{TemplateBinding VerticalAlignment}"
+                            HorizontalContentAlignment="{TemplateBinding HorizontalContentAlignment}"
+                            VerticalContentAlignment="{TemplateBinding VerticalContentAlignment}"
+                            Padding="{TemplateBinding Padding}"
+                            Content="{TemplateBinding Content}"/>
+                        <Border Classes="Highlighter"></Border>
+                    </Grid>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+    </Style>
     
-    
+    <Style Selector="ToggleButton.Theme PathIcon#On">
+        <Setter Property="IsVisible" Value="False"/>
+    </Style>
+    <Style Selector="ToggleButton.Theme:checked PathIcon#On">
+        <Setter Property="IsVisible" Value="True"/>
+    </Style>
+    <Style Selector="ToggleButton.Theme PathIcon#Off">
+        <Setter Property="IsVisible" Value="True"/>
+    </Style>
+    <Style Selector="ToggleButton.Theme:checked PathIcon#Off">
+        <Setter Property="IsVisible" Value="False"/>
+    </Style>
 </Styles>
 
 
