--- a/ArnesElectronics/Styles/admin/Buttons.axaml
+++ b/ArnesElectronics/Styles/admin/Buttons.axaml
@@ -5,7 +5,7 @@
             <!-- Add Controls for Previewer Here -->
             <StackPanel HorizontalAlignment="Center" VerticalAlignment="Center" Spacing="10">
                 <Button Classes="Transparent">Hello</Button>
-                <ToggleButton Classes="Theme" IsChecked="True">
+                <ToggleButton Classes="ColorTheme" IsChecked="True">
                     <Panel>
                         <PathIcon Name="On" Data="{StaticResource WeatherMoonRegular}"></PathIcon>
                         <PathIcon Name="Off" Data="{StaticResource WeatherSunnyRegular}"></PathIcon>
@@ -43,7 +43,7 @@
     </Style>
     
     <!-- Toggle Button Style -->
-    <Style Selector="ToggleButton.ColorTheme">
+    <Style Selector="ToggleButton.ColorTheme1">
         <Setter Property="Width" Value="35"/>
         <Setter Property="Height" Value="32"/>
         <Setter Property="CornerRadius" Value="15"/>
@@ -63,7 +63,7 @@
     </Style>
 
     <!-- Checked State -->
-    <Style Selector="ToggleButton.ColorTheme:checked">
+    <Style Selector="ToggleButton.ColorTheme1:checked">
         <Setter Property="Background" Value="{DynamicResource TextColorBrush}"/>
         <Setter Property="BorderBrush" Value="{DynamicResource PaneBackgroundBrush}"/>
         <Setter Property="Focusable" Value="False"/>
@@ -76,12 +76,11 @@
         </Setter>
     </Style>
     
-    <Style Selector="ToggleButton.Theme">
+    <Style Selector="ToggleButton.ColorTheme">
         <Setter Property="HorizontalAlignment" Value="Center"></Setter>
         <Setter Property="VerticalAlignment" Value="Center"></Setter>
         <Setter Property="HorizontalContentAlignment" Value="Center"></Setter>
         <Setter Property="VerticalContentAlignment" Value="Center"></Setter>
-        <Setter Property="Padding" Value="3"></Setter>
         <Setter Property="Background" Value="Transparent"></Setter>
         <Setter Property="Template">
             <Setter.Value>
@@ -101,16 +100,16 @@
         </Setter>
     </Style>
     
-    <Style Selector="ToggleButton.Theme PathIcon#On">
+    <Style Selector="ToggleButton.ColorTheme PathIcon#On">
         <Setter Property="IsVisible" Value="False"/>
     </Style>
-    <Style Selector="ToggleButton.Theme:checked PathIcon#On">
+    <Style Selector="ToggleButton.ColorTheme:checked PathIcon#On">
         <Setter Property="IsVisible" Value="True"/>
     </Style>
-    <Style Selector="ToggleButton.Theme PathIcon#Off">
+    <Style Selector="ToggleButton.ColorTheme PathIcon#Off">
         <Setter Property="IsVisible" Value="True"/>
     </Style>
-    <Style Selector="ToggleButton.Theme:checked PathIcon#Off">
+    <Style Selector="ToggleButton.ColorTheme:checked PathIcon#Off">
         <Setter Property="IsVisible" Value="False"/>
     </Style>
 </Styles>
