--- a/ArnesElectronics/Styles/admin/Buttons.axaml
+++ b/ArnesElectronics/Styles/admin/Buttons.axaml
@@ -16,6 +16,10 @@
         </Border>
     </Design.PreviewWith>
     
+    
+    <!-- Button Styles -->
+    
+    <!-- Transparent Button Style -->
     <Style Selector="Button.Transparent">
         <Setter Property="FontSize" Value="15"></Setter>
         <Setter Property="HorizontalAlignment" Value="Center"></Setter>
@@ -42,40 +46,49 @@
         </Setter>
     </Style>
     
-    <!-- Toggle Button Style -->
-    <Style Selector="ToggleButton.ColorTheme1">
-        <Setter Property="Width" Value="35"/>
-        <Setter Property="Height" Value="32"/>
-        <Setter Property="CornerRadius" Value="15"/>
-        <Setter Property="Background" Value="{DynamicResource PaneBackgroundBrush}"/>
-        <Setter Property="BorderBrush" Value="{DynamicResource TextColorBrush}"/>
-        <Setter Property="BorderThickness" Value="1"/>
-        <Setter Property="HorizontalContentAlignment" Value="Center"/>
-        <Setter Property="VerticalContentAlignment" Value="Center"/>
-        <Setter Property="Focusable" Value="False"/>
-        <Setter Property="ContentTemplate">
+    <!-- Outline Button Style -->
+    <Style Selector="Button.Outline">
+        <Setter Property="FontSize" Value="15"></Setter>
+        <Setter Property="HorizontalAlignment" Value="Center"></Setter>
+        <Setter Property="VerticalAlignment" Value="Center"></Setter>
+        <Setter Property="HorizontalContentAlignment" Value="Center"></Setter>
+        <Setter Property="VerticalContentAlignment" Value="Center"></Setter>
+        <Setter Property="Padding" Value="5"></Setter>
+        <Setter Property="CornerRadius" Value="3"></Setter>
+        <Setter Property="Template">
             <Setter.Value>
-                <DataTemplate>
-                    <TextBlock Text="🌙" FontSize="16" HorizontalAlignment="Center" VerticalAlignment="Center"/>
-                </DataTemplate>
-            </Setter.Value>
-        </Setter>
-    </Style>
-
-    <!-- Checked State -->
-    <Style Selector="ToggleButton.ColorTheme1:checked">
-        <Setter Property="Background" Value="{DynamicResource TextColorBrush}"/>
-        <Setter Property="BorderBrush" Value="{DynamicResource PaneBackgroundBrush}"/>
-        <Setter Property="Focusable" Value="False"/>
-        <Setter Property="ContentTemplate">
-            <Setter.Value>
-                <DataTemplate>
-                    <TextBlock Text="🌞" FontSize="16" HorizontalAlignment="Center" VerticalAlignment="Center"/>
-                </DataTemplate>
+                <ControlTemplate>
+                    <Grid>
+                        <Border Background="{DynamicResource PaneBackgroundBrush}"
+                                BorderBrush="{DynamicResource AccentColor}"
+                                BorderThickness="1"
+                                CornerRadius="{TemplateBinding CornerRadius}">
+                        </Border>
+                        <ContentPresenter
+                            FontSize ="{TemplateBinding FontSize}"
+                            HorizontalAlignment="{TemplateBinding HorizontalAlignment}"
+                            VerticalAlignment="{TemplateBinding VerticalAlignment}"
+                            HorizontalContentAlignment="{TemplateBinding HorizontalContentAlignment}"
+                            VerticalContentAlignment="{TemplateBinding VerticalContentAlignment}"
+                            Padding="{TemplateBinding Padding}"
+                            Content="{TemplateBinding Content}"/>
+                    </Grid>
+                </ControlTemplate>
             </Setter.Value>
         </Setter>
     </Style>
     
+    <Style Selector="Button.Outline:pointerover /template/ ContentPresenter">
+        <Setter Property="Foreground" Value="White"></Setter>
+    </Style>
+    
+    <Style Selector="Button.Outline:pointerover /template/ Border">
+        <Setter Property="Background" Value="{DynamicResource AccentColor}"></Setter>
+    </Style>
+    
+    <!-- Toggle Button Styles -->
+    
+    <!-- Color Theme Style -->
     <Style Selector="ToggleButton.ColorTheme">
         <Setter Property="HorizontalAlignment" Value="Center"></Setter>
         <Setter Property="VerticalAlignment" Value="Center"></Setter>
